# PsrSigSim

./: pyproject.toml  requirements.txt  setup.py
examples/: PsrSigSim_Simulated_Pulsar.ar_0.txt  Pulse_Nulling_Example.ipynb
psrsigsim/io/: psrfits.py
