[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psrsigsim"
version = "1.0.1"
description = "The NANOGrav Pulsar Signal Simulator."
readme = "README.rst"
license = { text = "MIT" }
authors = [
    { name = "Jeffrey S. Hazboun", email = "jeffrey.hazboun@nanograv.org" },
    { name = "Brent Shapiro-Albert" },
    { name = "Paul T. Baker" },
]
keywords = ["psrsigsim", "pulsar", "signal", "simulator", "NANOGrav"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "matplotlib>=3.4",
    "astropy>=5.0",
    "fitsio>=1.1",
    "h5py>=3.0",
    "pdat>=0.2",
    "pint-pulsar>=0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "flake8",
    "sphinx",
]

[project.urls]
Homepage = "https://github.com/PsrSigSim/PsrSigSim"
Repository = "https://github.com/PsrSigSim/PsrSigSim"

[tool.setuptools.packages.find]
include = [
    "psrsigsim",
    "psrsigsim.*",
]

[tool.setuptools.package-data]
psrsigsim = [
    "data/*.par",
    "data/*.npy",
    "PTA_pulsar_nb_data.txt",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.flake8]
exclude = ["docs"]
max-line-length = 100
